      - Modify Regex search code to use UTF-16 instead of UTF-8 for all
        searches. This brings search in line with the view components
        being able to display UTF-16 characters.
    - Implement issue 1378: Update Hunspell to 1.3.2.
    - Implement issue 1379: Update Boost to Boost 1.49.0.
    - Implement issue 1283: Spell check should have an ignore option.
    - Fix issue 1663: Generate TOC gives heading ids for items not in the TOC.
    - Fix issue 1642: Replace sometimes leaves a \1 in the text.
    - Fix issue 1635: Replace can replace too much text if manual selection includes extra text.
    - Fix issue 1639: Ensure Spellcheck treats single quotes as word boundary appropriately.
    - Fix issue 1624: Do not close Sigil if an invalid HTML file was added.
    - Fix issue 1623: Do not leave Sigil in an invalid state if an invalid book was opened.
    - Fix issue 1605: Sigil cannot read epubs missing mimetypes as first file since container.xml might not be found.
    - Fix issue 1621: Change sigilNotInTOC to sigil_not_in_toc for consistency but still recognize legacy value in old files.
    - Fix issue 1613: Generate TOC should always use filename#id instead of guessing for one heading per file.
    - Fix issue 1477: Sigil may crash when loading ePubs containing empty (zero-sized) files.
    - Fix issue 1589: Clicking on TOC entry the first time does not scroll to a heading at the top of the page.
    - Fix issue 1582: Replace All should be single-threaded to avoid certain crashes.
    - Fix issue 1581: Caret position in Book View - Code View syncing is not always correct.
    - Fix issue 1580: Chapter split starts new files with suffix _002 instead of 001.
    - Fix issue 1579: Generate Headings in TOC should select next item after unchecking an item.
    - Fix issue 1563: Split Chapter break can create empty page.
    - Fix issue 1284: Image and Stylesheet paths not updated for duplicate references when importing.